fix buttons alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,21 +64,22 @@
 }
 
 audio {
-  display: none;        
+  display: none;
 }
 
 .buttons {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 25%;
   position: fixed;
   top: 85%;
   left: 50%;
   transform: translate(-50%, 0);
-  width: 30%;
-  align-items: center;
+
  }
+
+ .buttons iframe{
+  margin-bottom: 20px;
+}
+
  .buttons * {
     flex: 0 0 auto;
  }
